syntax = "proto3";

package api.config.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/config/v1;configv1";

// 动态配置服务，支持分布式系统配置的下发、修改及实时监听。
service ConfigService {
  // 根据 Key 获取特定配置项。
  rpc GetConfig(GetConfigRequest) returns (ConfigResponse);

  // 实时覆盖或新增全局配置键值。
  rpc SetConfig(SetConfigRequest) returns (ConfigResponse);

  // 物理注销特定配置键。
  rpc DeleteConfig(DeleteConfigRequest) returns (google.protobuf.Empty);

  // 使用服务器流式 RPC 实时推送配置变更。
  rpc WatchConfig(WatchConfigRequest) returns (stream ConfigResponse);
}

// 配置单元详情。
message ConfigEntry {
  // 配置键标识。
  string key = 1;
  // 配置负载字符串。
  string value = 2;
  // 最后变更日期。
  google.protobuf.Timestamp updated_at = 3;
}

// 获取请求。
message GetConfigRequest {
  // 配置键。
  string key = 1;
}

// 配置响应详情。
message ConfigResponse {
  // 配置对象。
  ConfigEntry config = 1;
}

// 设置请求。
message SetConfigRequest {
  // 键名。
  string key = 1;
  // 目标值。
  string value = 2;
}

// 注销请求。
message DeleteConfigRequest {
  // 键名。
  string key = 1;
}

// 监听请求。
message WatchConfigRequest {
  // 监听的目标键名。
  string key = 1;
}
