syntax = "proto3";

package api.data_ingestion.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/data_ingestion/v1;v1";

// 原始数据采集与摄取服务。
service DataIngestion {
  // 上报单点事件。
  rpc IngestEvent(IngestEventRequest) returns (google.protobuf.Empty);

  // 批量上报事件流。
  rpc IngestBatch(IngestBatchRequest) returns (google.protobuf.Empty);
}

// 摄取载荷。
message IngestEventRequest {
  // 类型标识。
  string event_type = 1;
  // 事件字段集。
  map<string, string> event_data = 2;
  // 发生时间。
  google.protobuf.Timestamp timestamp = 3;
  // 来源系统。
  optional string source = 4;
}

// 批量载荷。
message IngestBatchRequest {
  // 事件集合。
  repeated IngestEventRequest events = 1;
}
