syntax = "proto3";

package api.payment.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "ecommerce/api/payment/v1;v1";

// PaymentService 定义了支付相关的 gRPC 服务
service PaymentService {
  // 创建支付请求 (由订单服务调用)
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);

  // 获取支付状态
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (Payment);

  // 处理来自支付网关的异步回调通知 (由支付网关调用)
  rpc ProcessCallback(ProcessCallbackRequest) returns (google.protobuf.Empty);

  // 创建退款请求
  rpc CreateRefund(CreateRefundRequest) returns (Refund);
}

// PaymentStatus 定义支付状态
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1; // 待支付
  PAYMENT_STATUS_SUCCESS = 2; // 支付成功
  PAYMENT_STATUS_FAILED = 3;  // 支付失败
  PAYMENT_STATUS_CLOSED = 4;  // 交易关闭
}

// RefundStatus 定义退款状态
enum RefundStatus {
  REFUND_STATUS_UNSPECIFIED = 0;
  REFUND_STATUS_PENDING = 1;    // 退款处理中
  REFUND_STATUS_SUCCESS = 2;    // 退款成功
  REFUND_STATUS_FAILED = 3;     // 退款失败
}


// PaymentMethod 定义支付方式
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_WECHAT = 1;
  PAYMENT_METHOD_ALIPAY = 2;
  PAYMENT_METHOD_BANK_TRANSFER = 3;
  PAYMENT_METHOD_CREDIT_CARD = 4;
}

// Payment 结构体定义支付信息
message Payment {
  string payment_id = 1; // 支付ID，通常由支付系统生成
  string order_id = 2;   // 关联的订单ID
  uint64 user_id = 3;    // 用户ID
  double amount = 4;     // 支付金额
  PaymentMethod method = 5; // 支付方式
  PaymentStatus status = 6; // 支付状态
  string transaction_id = 7; // 第三方支付交易ID
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  optional string currency = 10; // 货币类型，例如 CNY, USD
  string payment_url = 11; // 支付页面的URL
}

// Refund 结构体定义退款信息
message Refund {
    string refund_id = 1;
    string payment_id = 2;
    string order_id = 3;
    double amount = 4;
    string reason = 5;
    RefundStatus status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

// CreatePaymentRequest 创建支付请求
message CreatePaymentRequest {
  string order_id = 1;
  uint64 user_id = 2;
  double amount = 3;
  PaymentMethod method = 4;
  optional string currency = 5;
}

// CreatePaymentResponse 创建支付响应
message CreatePaymentResponse {
    Payment payment = 1;
}

// GetPaymentStatusRequest 获取支付状态请求
message GetPaymentStatusRequest {
  string payment_id = 1;
}

// ProcessCallbackRequest 处理支付回调
message ProcessCallbackRequest {
    string payment_id = 1;
    map<string, string> data = 2; // 来自支付网关的原始数据
}

// CreateRefundRequest 创建退款请求
message CreateRefundRequest {
    string payment_id = 1;
    double amount = 2;
    string reason = 3;
}